force-app/main/default/objects/Ritmo_ventas__c/Ritmo_ventas__c.object-meta.xml
<CustomObject>
    <label>Ritmo de ventas</label>
    <nameField>
        <label>Nombre de Ritmo de ventas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ritmos de ventas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>