force-app/main/default/objects/Ritmo_ventas__c/fields/Diferencia_Ritmo_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Ritmo_Ventas__c</fullName>
    <formula>N_Viviendas_vendidas__c -  N_Viviendas_previstas_venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia Ritmo Ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>