force-app/main/default/objects/Ritmo_ventas__c/fields/Fecha_fin_periodo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_periodo__c</fullName>
    <label>Fecha fin periodo</label>
    <type>Date</type>
</CustomField>