force-app/main/default/objects/Ritmo_ventas__c/fields/Fecha_inicio_periodo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio_periodo__c</fullName>
    <label>Fecha inicio periodo</label>
    <type>Date</type>
</CustomField>