force-app/main/default/objects/Ritmo_ventas__c/fields/Importe_euros_vendido__c.field-meta.xml
<CustomField>
    <fullName>Importe_euros_vendido__c</fullName>
    <label>Importe euros vendido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>