force-app/main/default/objects/Ritmo_ventas__c/fields/Importe_viviendas_previstas_venta__c.field-meta.xml
<CustomField>
    <fullName>Importe_viviendas_previstas_venta__c</fullName>
    <label>Importe viviendas previstas venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>