force-app/main/default/objects/Ritmo_ventas__c/fields/N_locales_caidos__c.field-meta.xml
<CustomField>
    <fullName>N_locales_caidos__c</fullName>
    <label>Nº locales caídos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>