force-app/main/default/objects/Ritmo_ventas__c/fields/N_Locales_vendidos__c.field-meta.xml
<CustomField>
    <fullName>N_Locales_vendidos__c</fullName>
    <label>Nº Locales vendidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>