force-app/main/default/objects/Ritmo_ventas__c/fields/N_semana__c.field-meta.xml
<CustomField>
    <fullName>N_semana__c</fullName>
    <label>Nº semana del año</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>