force-app/main/default/objects/Ritmo_ventas__c/fields/N_viviendas_caidas__c.field-meta.xml
<CustomField>
    <fullName>N_viviendas_caidas__c</fullName>
    <label>Nº viviendas caídas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>