force-app/main/default/objects/Ritmo_ventas__c/fields/N_Viviendas_previstas_venta__c.field-meta.xml
<CustomField>
    <fullName>N_Viviendas_previstas_venta__c</fullName>
    <label>Nº Viviendas previstas venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>