force-app/main/default/objects/Ritmo_ventas__c/fields/N_Viviendas_vendidas__c.field-meta.xml
<CustomField>
    <fullName>N_Viviendas_vendidas__c</fullName>
    <label>Nº Viviendas vendidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>