force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion__c</fullName>
    <label>% Ponderación</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>