force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_objetivo_ud_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_objetivo_ud_ventas__c</fullName>
    <formula>Ponderacion__c *  N_Viviendas_previstas_venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ponderación objetivo ud ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>