force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_real_acumulado_importe__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_real_acumulado_importe__c</fullName>
    <formula>Promocion__r.Ponderacion_real_acumulado_importe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ponderación real acumulado importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>