force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_real_acumulado_ud_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_real_acumulado_ud_ventas__c</fullName>
    <formula>Promocion__r.Ponderacion_real_acumulado_ud_ventas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ponderación real acumulado ud ventas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>