force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_real_importe_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_real_importe_ventas__c</fullName>
    <formula>Ponderacion__c *  Importe_euros_vendido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ponderación real importe ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>