force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_real_ud_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_real_ud_ventas__c</fullName>
    <formula>Ponderacion__c *  N_Viviendas_vendidas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ponderación real ud ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>