force-app/main/default/objects/Ritmo_ventas__c/fields/Ponderacion_Ritmo_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_Ritmo_de_Ventas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ponderación Ritmo de Ventas</label>
    <referenceTo>Ponderacion_Ritmo_Ventas__c</referenceTo>
    <relationshipLabel>Ritmos de ventas</relationshipLabel>
    <relationshipName>Ritmos_de_ventas</relationshipName>
    <type>Lookup</type>
</CustomField>