force-app/main/default/objects/Ritmo_ventas__c/listViews/Ritmos_por_promoci_n.listView-meta.xml
<ListView>
    <fullName>Ritmos_por_promoci_n</fullName>
    <columns>Fecha_inicio_periodo__c</columns>
    <columns>Fecha_fin_periodo__c</columns>
    <columns>NAME</columns>
    <columns>N_locales_caidos__c</columns>
    <columns>N_Locales_previstos_venta__c</columns>
    <columns>N_Locales_vendidos__c</columns>
    <columns>N_viviendas_caidas__c</columns>
    <columns>N_Viviendas_previstas_venta__c</columns>
    <columns>N_semana__c</columns>
    <columns>N_Viviendas_vendidas__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promocion__c</field>
        <operation>equals</operation>
        <value>CANMISSES62</value>
    </filters>
    <label>Ritmos por promoción</label>
</ListView>